@@ -1,3 +1,15 @@
+2010-07-09  Adam Barth  <abarth@webkit.org>
+
+        Unreviewed build fix.
+
+        We recently taught the HTMLTokenizer to recognize self-closing tags,
+        <http://trac.webkit.org/changeset/62926>, but that confused the
+        LegacyHTMLTreeBuilder.  It turns out that it's much happier if we never
+        say a tag is self-closing.
+
+        * html/HTMLTreeBuilder.cpp:
+        (WebCore::convertToOldStyle):
+
 2010-07-09  Nikolas Zimmermann  <nzimmermann@rim.com>
 
         Reviewed by Rob Buis.
